<Next.js/LightsOut>LightsOutCellにON/OFF時の色を指定

--- a/Next.js/LightsOut/pages/LightsOut.module.css
+++ b/Next.js/LightsOut/pages/LightsOut.module.css
@@ -6,9 +6,16 @@
     margin-left: 2px;
 }
 
+.LightsOutCellOn {
+    background-color: #ecec4a;
+}
+
+.LightsOutCellOff {
+    background-color: #e0e0e0;
+}
+
 .LightsOutBoardLine {
     display: block;
     height: 50px;
     margin-top: 2px;
-    margin-left: 2px;
 }
