<Next.js/LightsOut>LightsOutCellを均等割りにした

--- a/Next.js/LightsOut/pages/LightsOut.module.css
+++ b/Next.js/LightsOut/pages/LightsOut.module.css
@@ -1,6 +1,6 @@
 .LightsOutCell {
-    width: 50px;
-    height: 50px;
+    width: 100%;
+    height: 100%;
     border-width: 0px;
     margin-top: 2px;
     margin-left: 2px;
@@ -23,13 +23,22 @@
 }
 
 .LightsOutBoardLine {
-    display: block;
-    height: 50px;
+    display: flex;
+    width: 300px;
+    height: 100%;
+    justify-content: space-around;
     margin-top: 2px;
 }
 
+.LightsOutBoard {
+    display: flex;
+    flex-direction: column;
+    height: 300px;
+    justify-content: space-around;
+}
+
 .LightsOutNewGameButton {
-    width: 154px;
+    width: 298px;
     height: 25px;
     border-width: 0px;
     margin: 2px;
