--- a/Next.js/LightsOut/pages/LightsOut.module.css
+++ b/Next.js/LightsOut/pages/LightsOut.module.css
@@ -1,3 +1,4 @@
+/* === LightsOutCell === */
 .LightsOutCell {
     width: 100%;
     height: 100%;
@@ -22,6 +23,7 @@
     background-color: #f0f0f0;
 }
 
+/* === LightsOutBoard === */
 .LightsOutBoardLine {
     display: flex;
     width: 300px;
@@ -37,6 +39,7 @@
     justify-content: space-around;
 }
 
+/* === LightsOutNewGameButton === */
 .LightsOutNewGameButton {
     width: 298px;
     height: 25px;
