<Next.js/LightsOut>ゲーム全体を横向き中央に配置

--- a/Next.js/LightsOut/pages/LightsOut.module.css
+++ b/Next.js/LightsOut/pages/LightsOut.module.css
@@ -56,3 +56,9 @@
 .LightsOutNewGameButton:active {
     background-color: #77bbbb;
 }
+
+/* === LightsOutGame === */
+.LightsOutGame {
+    display: flex;
+    justify-content: center;
+}
