<Next.js/LightsOut>Resizeボタンを簡易的に実装

--- a/Next.js/LightsOut/pages/LightsOut.module.css
+++ b/Next.js/LightsOut/pages/LightsOut.module.css
@@ -41,10 +41,10 @@
 
 /* === LightsOutNewGameButton === */
 .LightsOutNewGameButton {
-    width: 298px;
+    width: 198px;
     height: 25px;
     border-width: 0px;
-    margin: 2px;
+    margin-left: 2px;
     margin-bottom: 5px;
     background-color: #88cccc;
 }
@@ -55,6 +55,24 @@
 
 .LightsOutNewGameButton:active {
     background-color: #77bbbb;
+}
+
+/* === LightsOutResizeButton === */
+.LightsOutResizeButton {
+    width: 98px;
+    height: 25px;
+    border-width: 0px;
+    margin-left: 2px;
+    margin-bottom: 5px;
+    background-color: #dddd80;
+}
+
+.LightsOutResizeButton:hover {
+    background-color: #eeee90;
+}
+
+.LightsOutResizeButton:active {
+    background-color: #cccc70;
 }
 
 /* === LightsOutGame === */
