--- a/Next.js/LightsOut/pages/LightsOut.module.css
+++ b/Next.js/LightsOut/pages/LightsOut.module.css
@@ -80,3 +80,29 @@
     display: flex;
     justify-content: center;
 }
+
+.LightsOutMenuBar {
+    display: flex;
+}
+
+/* === ResizePopup === */
+.LightsOutResizePopup {
+    transform: scale(0);
+    position: absolute;
+    
+    z-index: 2;
+
+    width: 128px;
+    padding: 5px;
+    background: #eeeeb0;
+
+    left: -20px;
+}
+
+.LightsOutResizePopupShown {
+    transform: scale(1);
+}
+
+.LightsOutResizePopupParent {
+    position: relative;
+}
