--- a/Next.js/LightsOut/components/LightsOutGame/LightsOutGame.module.css
+++ b/Next.js/LightsOut/components/LightsOutGame/LightsOutGame.module.css
@@ -11,11 +11,14 @@
     position: relative;
 }
 
-.clear_popup {    
+.clear_popup {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     width: 200px;
     height: 150px;
-    background-color: #aaddaa;
-    text-align: center;
+    background-color: #d0eed0;
     position: absolute;
     top: -225px;
     z-index: 4;
@@ -29,4 +32,28 @@
     left: 0;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 3;
+}
+
+/* === ClearText === */
+.clear_text {
+    font-size: 20px;
+    margin: 15px;
+}
+
+/* === OKButton === */
+.ok_button {
+    width: 150px;
+    height: 40px;
+    border-width: 0px;
+    margin-left: 2px;
+    margin-bottom: 5px;
+    background-color: #88cccc;
+}
+
+.ok_button:hover {
+    background-color: #99dddd;
+}
+
+.ok_button:active {
+    background-color: #77bbbb;
 }
