<Next.js/Minesweeper>セルを右クリックで旗を立てる

--- a/Next.js/Minesweeper/components/MinesweeperCell.module.css
+++ b/Next.js/Minesweeper/components/MinesweeperCell.module.css
@@ -23,3 +23,18 @@
 .cell_open {
     background-color: #d3d3d3;
 }
+
+.cell_flagged {
+    background-color: #dddd66;
+    color: #dd3333;
+}
+
+.cell_flagged:hover {
+    background-color: #eaea77;
+    color: #ea4444;
+}
+
+.cell_flagged:active {
+    background-color: #c5c555;
+    color: #c53333;
+}
