<Next.js/Minesweeper>数字と旗の数が一致するときに数字を押すと、周りを自動で開放

--- a/Next.js/Minesweeper/components/MinesweeperCell.module.css
+++ b/Next.js/Minesweeper/components/MinesweeperCell.module.css
@@ -24,6 +24,10 @@
     background-color: #d3d3d3;
 }
 
+.cell_open:active {
+    background-color: #c3c3c3;
+}
+
 .cell_flagged {
     background-color: #dddd66;
     color: #dd3333;
