<Next.js/Minesweeper>失敗したとき、爆弾の場所と間違えて旗を立てた場所を表示

--- a/Next.js/Minesweeper/components/MinesweeperCell/MinesweeperCell.module.css
+++ b/Next.js/Minesweeper/components/MinesweeperCell/MinesweeperCell.module.css
@@ -58,3 +58,13 @@
     background-color: #c5c555;
     color: #c53333;
 }
+
+.cell_mine {
+    background-color: #c55555;
+    color: #e9e9e9;
+}
+
+.mistake_flag {
+    background-color: #bb6600;
+    color: #e9e9e9;
+}
