--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -19,16 +19,24 @@
     width: 100%;
     height: 100%;
     background-color: rgb(100%, 100%, 100%);
-    border-radius: 1rem;
+    border-radius: 6px;
     padding: 1rem;
     box-sizing: border-box;
-    transition: background-color 0.1s;
-    box-shadow: 1px 1px 4px 0px rgba(25%, 30%, 25%, 0.3);
+    box-shadow: 0 1px 2px 0 rgba(25%, 30%, 25%, 0.3);
+    transition:
+        background-color 0.1s ease-in-out,
+        box-shadow 0.2s ease-in-out;
+}
+
+.game_button > div:hover {
+    box-shadow:
+        0 1px 2px 0 rgba(25%, 30%, 25%, 0.3),
+        0 0 8px -2px rgba(25%, 30%, 25%, 0.3);
 }
 
 @media screen and (hover: hover) {
     .game_button > div:hover {
-        background-color: rgb(87%, 92%, 87%);
+        background-color: rgb(88%, 92%, 88%);
     }
 }
 
@@ -37,14 +45,15 @@
     font-weight: bolder;
     letter-spacing: 0.1rem;
     margin-bottom: 0.5rem;
-    text-decoration-line: underline;
+    text-decoration-line: none;
 }
 
 .game_button > div > div + div {
     font-size: 1rem;
     font-weight: normal;
-    letter-spacing: 0.1rem;
+    color: #707070;
+    font-size: 0.9rem;
+    letter-spacing: 0.05rem;
     line-height: 1.5rem;
-    margin-left: 0.5rem;
     text-decoration-line: none;
 }
