--- a/website/src/components/website/header.module.css
+++ b/website/src/components/website/header.module.css
@@ -10,6 +10,8 @@
     height: var(--HeaderHeight);
     box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.2);
     background-color: #f5f5f5;
+    display: flex;
+    flex-direction: row;
 }
 
 .title {
@@ -24,6 +26,57 @@
 .title h1 {
     display: flex;
     align-items: center;
+}
+
+.header_spacer {
+    display: flex;
+    flex-grow: 1;
+}
+
+.games {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    margin-right: 1rem;
+    color: #000000;
+    cursor: pointer;
+    transition: opacity 1s;
+}
+
+.games:hover {
+    color: #808080;
+    transition: color 0.1s ease-in-out;
+}
+
+.menu {
+    position: absolute;
+    height: 100%;
+    width: auto;
+    right: 0;
+    transition: opacity 0.2s ease-in-out;
+}
+
+.menu_narrow {
+    display: flex;
+    height: 100%;
+    align-items: center;
+    margin-right: 1rem;
+    color: #000000;
+    cursor: pointer;
+
+    opacity: 0;
+    pointer-events: none;
+}
+
+@media screen and (max-width: 26rem) {
+    .menu_wide {
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    .menu_narrow {
+        opacity: 1;
+    }
 }
 
 .header ~ .spacer {
