--- a/website/src/components/website/header/index.module.css
+++ b/website/src/components/website/header/index.module.css
@@ -38,13 +38,6 @@
 }
 
 .menu_narrow {
-    display: flex;
-    height: 100%;
-    align-items: center;
-    margin-right: 1rem;
-    color: #000000;
-    cursor: pointer;
-
     opacity: 0;
     pointer-events: none;
 }
@@ -57,6 +50,7 @@
 
     .menu_narrow {
         opacity: 1;
+        pointer-events: auto;
     }
 }
 
