--- a/website/src/pages/index.module.css
+++ b/website/src/pages/index.module.css
@@ -6,6 +6,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
     gap: 1rem;
+    margin-bottom: 1rem;
 }
 
 .game_button {
