--- a/Next.js/Minesweeper/components/MinesweeperMenuBar/ResizeButton.module.css
+++ b/Next.js/Minesweeper/components/MinesweeperMenuBar/ResizeButton.module.css
@@ -26,6 +26,7 @@
     border-color: #eeeeee;
     border-style: solid;
     margin: 2px;
+    padding: 0.6rem;
     background-color: #b8b8ee;
     font-size: 0.9rem;
     color: #000000;
